fixed alignment issues

--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -2,16 +2,11 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /* justify-content: space-around; */
+    justify-content: space-around;
     color: aqua;
-    position: absolute;
-    /* top: 0; */
-    /* right: 0; */
     padding-top: 15px;
     font-size: 25px;
     text-decoration: none;
-    list-style-type: none;
-    height: 10vh;
     width: 100vw;
   }
 
@@ -20,4 +15,7 @@
     flex-direction: row;
     height: 5vh;
     text-decoration: none;
+    list-style-type: none;
+    justify-content: space-around;
+    width: 100vw;
 }
